# serializer version: 1
# name: TestDatabase.test_database_warehouse_joins_persons_poe_v2
  '''
  
  SELECT events__some_field.key AS key 
  FROM events LEFT JOIN (
  SELECT groups.key AS key, key AS events__some_field___key 
  FROM (
  SELECT groups.group_type_index AS index, groups.group_key AS key 
  FROM groups 
  WHERE equals(groups.team_id, 420) 
  GROUP BY groups.group_type_index, groups.group_key) AS groups) AS events__some_field ON equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.person_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), events__some_field.events__some_field___key) 
  WHERE equals(events.team_id, 420) 
  LIMIT 10000
  '''
# ---
# name: TestDatabase.test_serialize_database_no_person_on_events
  '''
  {
      "events": {
          "fields": {
              "uuid": {
                  "chain": null,
                  "fields": null,
                  "name": "uuid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "event": {
                  "chain": null,
                  "fields": null,
                  "name": "event",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "elements_chain": {
                  "chain": null,
                  "fields": null,
                  "name": "elements_chain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "$session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$window_id": {
                  "chain": null,
                  "fields": null,
                  "name": "$window_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "poe": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "properties"
                  ],
                  "name": "poe",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_0": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_0",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_1": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_1",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_2": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_2",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_3": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_3",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_4": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_4",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "person": {
                  "chain": [
                      "pdi",
                      "person"
                  ],
                  "fields": null,
                  "name": "person",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "person_id": {
                  "chain": [
                      "pdi",
                      "person_id"
                  ],
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "$group_0": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_0",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_0": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_0",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_1": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_1",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_1": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_1",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_2": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_2",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_2": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_2",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_3": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_3",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_3": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_3",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_4": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_4",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_4": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_4",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$exit_current_url",
                      "$exit_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$event_count_map",
                      "$pageview_count",
                      "$autocapture_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce"
                  ],
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              }
          },
          "id": "events",
          "name": "events",
          "type": "posthog"
      },
      "groups": {
          "fields": {
              "index": {
                  "chain": null,
                  "fields": null,
                  "name": "index",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "key": {
                  "chain": null,
                  "fields": null,
                  "name": "key",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "updated_at": {
                  "chain": null,
                  "fields": null,
                  "name": "updated_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              }
          },
          "id": "groups",
          "name": "groups",
          "type": "posthog"
      },
      "persons": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "is_identified": {
                  "chain": null,
                  "fields": null,
                  "name": "is_identified",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id"
                  ],
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "$virt_initial_referring_domain_type": {
                  "chain": null,
                  "fields": null,
                  "name": "$virt_initial_referring_domain_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              },
              "$virt_initial_channel_type": {
                  "chain": null,
                  "fields": null,
                  "name": "$virt_initial_channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              }
          },
          "id": "persons",
          "name": "persons",
          "type": "posthog"
      },
      "person_distinct_ids": {
          "fields": {
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "person_distinct_ids",
          "name": "person_distinct_ids",
          "type": "posthog"
      },
      "person_overrides": {
          "fields": {
              "old_person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "old_person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "override_person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "override_person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "oldest_event": {
                  "chain": null,
                  "fields": null,
                  "name": "oldest_event",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "merged_at": {
                  "chain": null,
                  "fields": null,
                  "name": "merged_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              }
          },
          "id": "person_overrides",
          "name": "person_overrides",
          "type": "posthog"
      },
      "session_replay_events": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "first_url": {
                  "chain": null,
                  "fields": null,
                  "name": "first_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "click_count": {
                  "chain": null,
                  "fields": null,
                  "name": "click_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "keypress_count": {
                  "chain": null,
                  "fields": null,
                  "name": "keypress_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "mouse_activity_count": {
                  "chain": null,
                  "fields": null,
                  "name": "mouse_activity_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "active_milliseconds": {
                  "chain": null,
                  "fields": null,
                  "name": "active_milliseconds",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_log_count": {
                  "chain": null,
                  "fields": null,
                  "name": "console_log_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_warn_count": {
                  "chain": null,
                  "fields": null,
                  "name": "console_warn_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_error_count": {
                  "chain": null,
                  "fields": null,
                  "name": "console_error_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "size": {
                  "chain": null,
                  "fields": null,
                  "name": "size",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "event_count": {
                  "chain": null,
                  "fields": null,
                  "name": "event_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "message_count": {
                  "chain": null,
                  "fields": null,
                  "name": "message_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "events": {
                  "chain": null,
                  "fields": [
                      "uuid",
                      "event",
                      "properties",
                      "timestamp",
                      "team_id",
                      "distinct_id",
                      "elements_chain",
                      "created_at",
                      "$session_id",
                      "$window_id",
                      "pdi",
                      "poe",
                      "goe_0",
                      "goe_1",
                      "goe_2",
                      "goe_3",
                      "goe_4",
                      "person",
                      "person_id",
                      "$group_0",
                      "group_0",
                      "$group_1",
                      "group_1",
                      "$group_2",
                      "group_2",
                      "$group_3",
                      "group_3",
                      "$group_4",
                      "group_4",
                      "session"
                  ],
                  "name": "events",
                  "schema_valid": true,
                  "table": "events",
                  "type": "lazy_table"
              },
              "properties": {
                  "chain": [
                      "events",
                      "properties"
                  ],
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "console_logs": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "log_source",
                      "log_source_id",
                      "instance_id",
                      "timestamp",
                      "message",
                      "level"
                  ],
                  "name": "console_logs",
                  "schema_valid": true,
                  "table": "console_logs_log_entries",
                  "type": "lazy_table"
              },
              "person": {
                  "chain": [
                      "pdi",
                      "person"
                  ],
                  "fields": null,
                  "name": "person",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "person_id": {
                  "chain": [
                      "pdi",
                      "person_id"
                  ],
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$exit_current_url",
                      "$exit_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$event_count_map",
                      "$pageview_count",
                      "$autocapture_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce"
                  ],
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              },
              "start_time": {
                  "chain": null,
                  "fields": null,
                  "name": "start_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "end_time": {
                  "chain": null,
                  "fields": null,
                  "name": "end_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              }
          },
          "id": "session_replay_events",
          "name": "session_replay_events",
          "type": "posthog"
      },
      "cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "cohort_people",
          "name": "cohort_people",
          "type": "posthog"
      },
      "static_cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "static_cohort_people",
          "name": "static_cohort_people",
          "type": "posthog"
      },
      "log_entries": {
          "fields": {
              "log_source": {
                  "chain": null,
                  "fields": null,
                  "name": "log_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "log_source_id": {
                  "chain": null,
                  "fields": null,
                  "name": "log_source_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "instance_id": {
                  "chain": null,
                  "fields": null,
                  "name": "instance_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "message": {
                  "chain": null,
                  "fields": null,
                  "name": "message",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "level": {
                  "chain": null,
                  "fields": null,
                  "name": "level",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "log_entries",
          "name": "log_entries",
          "type": "posthog"
      },
      "sessions": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$start_timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "$start_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$end_timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "$end_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$urls": {
                  "chain": null,
                  "fields": null,
                  "name": "$urls",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "$entry_current_url": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_pathname": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$exit_current_url": {
                  "chain": null,
                  "fields": null,
                  "name": "$exit_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$exit_pathname": {
                  "chain": null,
                  "fields": null,
                  "name": "$exit_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_source": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_campaign": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_campaign",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_medium": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_medium",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_term": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_term",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_content": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_content",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_referring_domain": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_referring_domain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gclid": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_gclid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gad_source": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_gad_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$pageview_count": {
                  "chain": null,
                  "fields": null,
                  "name": "$pageview_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$autocapture_count": {
                  "chain": null,
                  "fields": null,
                  "name": "$autocapture_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$channel_type": {
                  "chain": null,
                  "fields": null,
                  "name": "$channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$session_duration": {
                  "chain": null,
                  "fields": null,
                  "name": "$session_duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "duration": {
                  "chain": null,
                  "fields": null,
                  "name": "duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$is_bounce": {
                  "chain": null,
                  "fields": null,
                  "name": "$is_bounce",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              }
          },
          "id": "sessions",
          "name": "sessions",
          "type": "posthog"
      },
      "heatmaps": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "x": {
                  "chain": null,
                  "fields": null,
                  "name": "x",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "y": {
                  "chain": null,
                  "fields": null,
                  "name": "y",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "scale_factor": {
                  "chain": null,
                  "fields": null,
                  "name": "scale_factor",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_width": {
                  "chain": null,
                  "fields": null,
                  "name": "viewport_width",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_height": {
                  "chain": null,
                  "fields": null,
                  "name": "viewport_height",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "pointer_target_fixed": {
                  "chain": null,
                  "fields": null,
                  "name": "pointer_target_fixed",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "current_url": {
                  "chain": null,
                  "fields": null,
                  "name": "current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "type": {
                  "chain": null,
                  "fields": null,
                  "name": "type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "heatmaps",
          "name": "heatmaps",
          "type": "posthog"
      }
  }
  '''
# ---
# name: TestDatabase.test_serialize_database_with_person_on_events_enabled
  '''
  {
      "events": {
          "fields": {
              "uuid": {
                  "chain": null,
                  "fields": null,
                  "name": "uuid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "event": {
                  "chain": null,
                  "fields": null,
                  "name": "event",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "elements_chain": {
                  "chain": null,
                  "fields": null,
                  "name": "elements_chain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "$session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$window_id": {
                  "chain": null,
                  "fields": null,
                  "name": "$window_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "poe": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "properties"
                  ],
                  "name": "poe",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_0": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_0",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_1": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_1",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_2": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_2",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_3": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_3",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_4": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "name": "goe_4",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "person": {
                  "chain": [
                      "poe"
                  ],
                  "fields": null,
                  "name": "person",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$group_0": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_0",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_0": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_0",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_1": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_1",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_1": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_1",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_2": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_2",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_2": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_2",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_3": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_3",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_3": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_3",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_4": {
                  "chain": null,
                  "fields": null,
                  "name": "$group_4",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_4": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "name": "group_4",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$exit_current_url",
                      "$exit_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$event_count_map",
                      "$pageview_count",
                      "$autocapture_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce"
                  ],
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              }
          },
          "id": "events",
          "name": "events",
          "type": "posthog"
      },
      "groups": {
          "fields": {
              "index": {
                  "chain": null,
                  "fields": null,
                  "name": "index",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "key": {
                  "chain": null,
                  "fields": null,
                  "name": "key",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "updated_at": {
                  "chain": null,
                  "fields": null,
                  "name": "updated_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              }
          },
          "id": "groups",
          "name": "groups",
          "type": "posthog"
      },
      "persons": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "is_identified": {
                  "chain": null,
                  "fields": null,
                  "name": "is_identified",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id"
                  ],
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "$virt_initial_referring_domain_type": {
                  "chain": null,
                  "fields": null,
                  "name": "$virt_initial_referring_domain_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              },
              "$virt_initial_channel_type": {
                  "chain": null,
                  "fields": null,
                  "name": "$virt_initial_channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              }
          },
          "id": "persons",
          "name": "persons",
          "type": "posthog"
      },
      "person_distinct_ids": {
          "fields": {
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "person_distinct_ids",
          "name": "person_distinct_ids",
          "type": "posthog"
      },
      "person_overrides": {
          "fields": {
              "old_person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "old_person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "override_person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "override_person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "oldest_event": {
                  "chain": null,
                  "fields": null,
                  "name": "oldest_event",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "merged_at": {
                  "chain": null,
                  "fields": null,
                  "name": "merged_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              }
          },
          "id": "person_overrides",
          "name": "person_overrides",
          "type": "posthog"
      },
      "session_replay_events": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "first_url": {
                  "chain": null,
                  "fields": null,
                  "name": "first_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "click_count": {
                  "chain": null,
                  "fields": null,
                  "name": "click_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "keypress_count": {
                  "chain": null,
                  "fields": null,
                  "name": "keypress_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "mouse_activity_count": {
                  "chain": null,
                  "fields": null,
                  "name": "mouse_activity_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "active_milliseconds": {
                  "chain": null,
                  "fields": null,
                  "name": "active_milliseconds",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_log_count": {
                  "chain": null,
                  "fields": null,
                  "name": "console_log_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_warn_count": {
                  "chain": null,
                  "fields": null,
                  "name": "console_warn_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_error_count": {
                  "chain": null,
                  "fields": null,
                  "name": "console_error_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "size": {
                  "chain": null,
                  "fields": null,
                  "name": "size",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "event_count": {
                  "chain": null,
                  "fields": null,
                  "name": "event_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "message_count": {
                  "chain": null,
                  "fields": null,
                  "name": "message_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "events": {
                  "chain": null,
                  "fields": [
                      "uuid",
                      "event",
                      "properties",
                      "timestamp",
                      "team_id",
                      "distinct_id",
                      "elements_chain",
                      "created_at",
                      "$session_id",
                      "$window_id",
                      "pdi",
                      "poe",
                      "goe_0",
                      "goe_1",
                      "goe_2",
                      "goe_3",
                      "goe_4",
                      "person",
                      "person_id",
                      "$group_0",
                      "group_0",
                      "$group_1",
                      "group_1",
                      "$group_2",
                      "group_2",
                      "$group_3",
                      "group_3",
                      "$group_4",
                      "group_4",
                      "session"
                  ],
                  "name": "events",
                  "schema_valid": true,
                  "table": "events",
                  "type": "lazy_table"
              },
              "properties": {
                  "chain": [
                      "events",
                      "properties"
                  ],
                  "fields": null,
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "console_logs": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "log_source",
                      "log_source_id",
                      "instance_id",
                      "timestamp",
                      "message",
                      "level"
                  ],
                  "name": "console_logs",
                  "schema_valid": true,
                  "table": "console_logs_log_entries",
                  "type": "lazy_table"
              },
              "person": {
                  "chain": [
                      "pdi",
                      "person"
                  ],
                  "fields": null,
                  "name": "person",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "person_id": {
                  "chain": [
                      "pdi",
                      "person_id"
                  ],
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$exit_current_url",
                      "$exit_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$event_count_map",
                      "$pageview_count",
                      "$autocapture_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce"
                  ],
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              },
              "start_time": {
                  "chain": null,
                  "fields": null,
                  "name": "start_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "end_time": {
                  "chain": null,
                  "fields": null,
                  "name": "end_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              }
          },
          "id": "session_replay_events",
          "name": "session_replay_events",
          "type": "posthog"
      },
      "cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "cohort_people",
          "name": "cohort_people",
          "type": "posthog"
      },
      "static_cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "static_cohort_people",
          "name": "static_cohort_people",
          "type": "posthog"
      },
      "log_entries": {
          "fields": {
              "log_source": {
                  "chain": null,
                  "fields": null,
                  "name": "log_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "log_source_id": {
                  "chain": null,
                  "fields": null,
                  "name": "log_source_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "instance_id": {
                  "chain": null,
                  "fields": null,
                  "name": "instance_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "message": {
                  "chain": null,
                  "fields": null,
                  "name": "message",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "level": {
                  "chain": null,
                  "fields": null,
                  "name": "level",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "log_entries",
          "name": "log_entries",
          "type": "posthog"
      },
      "sessions": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$start_timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "$start_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$end_timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "$end_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$urls": {
                  "chain": null,
                  "fields": null,
                  "name": "$urls",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "$entry_current_url": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_pathname": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$exit_current_url": {
                  "chain": null,
                  "fields": null,
                  "name": "$exit_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$exit_pathname": {
                  "chain": null,
                  "fields": null,
                  "name": "$exit_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_source": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_campaign": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_campaign",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_medium": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_medium",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_term": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_term",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_content": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_utm_content",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_referring_domain": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_referring_domain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gclid": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_gclid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gad_source": {
                  "chain": null,
                  "fields": null,
                  "name": "$entry_gad_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$pageview_count": {
                  "chain": null,
                  "fields": null,
                  "name": "$pageview_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$autocapture_count": {
                  "chain": null,
                  "fields": null,
                  "name": "$autocapture_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$channel_type": {
                  "chain": null,
                  "fields": null,
                  "name": "$channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$session_duration": {
                  "chain": null,
                  "fields": null,
                  "name": "$session_duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "duration": {
                  "chain": null,
                  "fields": null,
                  "name": "duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$is_bounce": {
                  "chain": null,
                  "fields": null,
                  "name": "$is_bounce",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              }
          },
          "id": "sessions",
          "name": "sessions",
          "type": "posthog"
      },
      "heatmaps": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "x": {
                  "chain": null,
                  "fields": null,
                  "name": "x",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "y": {
                  "chain": null,
                  "fields": null,
                  "name": "y",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "scale_factor": {
                  "chain": null,
                  "fields": null,
                  "name": "scale_factor",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_width": {
                  "chain": null,
                  "fields": null,
                  "name": "viewport_width",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_height": {
                  "chain": null,
                  "fields": null,
                  "name": "viewport_height",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "pointer_target_fixed": {
                  "chain": null,
                  "fields": null,
                  "name": "pointer_target_fixed",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "current_url": {
                  "chain": null,
                  "fields": null,
                  "name": "current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "type": {
                  "chain": null,
                  "fields": null,
                  "name": "type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "heatmaps",
          "name": "heatmaps",
          "type": "posthog"
      }
  }
  '''
# ---
